[gd_scene load_steps=53 format=3 uid="uid://uyus3jc2avch"]

[ext_resource type="Texture2D" uid="uid://c7sjbxxhi1gys" path="res://assets/oak_woods_v1.0/enemy/Mushroom/Idle.png" id="1_62j7p"]
[ext_resource type="Script" uid="uid://d06hu2fs53qlr" path="res://entities/enemies/mushroom.gd" id="1_mafvb"]
[ext_resource type="Texture2D" uid="uid://bp66nxc42l5kb" path="res://assets/oak_woods_v1.0/enemy/Mushroom/Attack.png" id="2_mafvb"]
[ext_resource type="Texture2D" uid="uid://bju7rqvt1xdpk" path="res://assets/oak_woods_v1.0/enemy/Mushroom/Take Hit.png" id="3_asr5j"]
[ext_resource type="Texture2D" uid="uid://qw16jp8wkf5k" path="res://assets/oak_woods_v1.0/enemy/Mushroom/Death.png" id="4_u62pg"]
[ext_resource type="Texture2D" uid="uid://dkt70milrcakd" path="res://assets/oak_woods_v1.0/enemy/Mushroom/Run.png" id="5_ku88o"]
[ext_resource type="PackedScene" uid="uid://d3f61qbnmnyla" path="res://components/damage_box/damage_box.tscn" id="7_asr5j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i2ghr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3smu8"]
atlas = ExtResource("1_62j7p")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc3vf"]
atlas = ExtResource("1_62j7p")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueet2"]
atlas = ExtResource("1_62j7p")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_meuqg"]
atlas = ExtResource("1_62j7p")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n61h3"]
atlas = ExtResource("2_mafvb")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_75tcu"]
atlas = ExtResource("2_mafvb")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnngp"]
atlas = ExtResource("2_mafvb")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7qfl"]
atlas = ExtResource("2_mafvb")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_83bvc"]
atlas = ExtResource("2_mafvb")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_julaj"]
atlas = ExtResource("2_mafvb")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwq6x"]
atlas = ExtResource("3_asr5j")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7apt5"]
atlas = ExtResource("3_asr5j")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfso7"]
atlas = ExtResource("3_asr5j")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_abbqv"]
atlas = ExtResource("3_asr5j")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkxr6"]
atlas = ExtResource("4_u62pg")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_my3on"]
atlas = ExtResource("4_u62pg")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbyho"]
atlas = ExtResource("4_u62pg")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqpyj"]
atlas = ExtResource("4_u62pg")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_asr5j"]
atlas = ExtResource("1_62j7p")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_u62pg"]
atlas = ExtResource("1_62j7p")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku88o"]
atlas = ExtResource("1_62j7p")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2ghr"]
atlas = ExtResource("1_62j7p")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uy0d"]
atlas = ExtResource("5_ku88o")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pewp0"]
atlas = ExtResource("5_ku88o")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulvyh"]
atlas = ExtResource("5_ku88o")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_esuca"]
atlas = ExtResource("5_ku88o")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w0vn"]
atlas = ExtResource("5_ku88o")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojoql"]
atlas = ExtResource("5_ku88o")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_swpph"]
atlas = ExtResource("5_ku88o")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4d63"]
atlas = ExtResource("5_ku88o")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_geb3e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc3vf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueet2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meuqg")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n61h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75tcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnngp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7qfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83bvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_julaj")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwq6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7apt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfso7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abbqv")
}],
"loop": false,
"name": &"damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkxr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my3on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbyho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqpyj")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asr5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u62pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku88o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2ghr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asr5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u62pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku88o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2ghr")
}],
"loop": false,
"name": &"recover",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uy0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pewp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulvyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esuca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w0vn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojoql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swpph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4d63")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_xut0u"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_asr5j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_s6rux"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_pxhim"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["damage"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_87vnb"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.02, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_u62pg"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_u3ftc"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lxpdx"]
_data = {
&"Idle": SubResource("Animation_xut0u"),
&"RESET": SubResource("Animation_asr5j"),
&"attack": SubResource("Animation_s6rux"),
&"damage": SubResource("Animation_pxhim"),
&"death": SubResource("Animation_87vnb"),
&"recover": SubResource("Animation_u62pg"),
&"run": SubResource("Animation_u3ftc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mafvb"]
size = Vector2(21, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_u62pg"]

[sub_resource type="Animation" id="Animation_i2ghr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Damage_text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Damage_text:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, -34)]
}

[sub_resource type="Animation" id="Animation_ku88o"]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Damage_text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.20722497, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 0.61960787), Color(1, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Damage_text:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.27340677),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-6, -34), Vector2(-6, -47)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3smu8"]
_data = {
&"RESET": SubResource("Animation_i2ghr"),
&"damage": SubResource("Animation_ku88o")
}

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_mafvb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_i2ghr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4.76837e-07, -10)
scale = Vector2(0.926667, 0.926667)
sprite_frames = SubResource("SpriteFrames_geb3e")
animation = &"damage"
autoplay = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lxpdx")
}
autoplay = "Idle"

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(11.5, -1)
shape = SubResource("RectangleShape2D_mafvb")

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("7_asr5j")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 64

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(17, -1)
shape = SubResource("CircleShape2D_u62pg")
disabled = false

[node name="Damage_text" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -6.0
offset_top = -34.0
offset_right = 25.0
offset_bottom = 14.0
theme_override_font_sizes/font_size = 10
text = "20

"

[node name="DmgtxtAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3smu8")
}

[node name="run" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="run" to="." method="_on_run_timeout"]

[editable path="AttackDirection/DamageBox"]
